# StateGridSimulatorNew

./: .env.example  .gitignore  ARCHITECTURE.md  QWEN.md  README.md  docker-compose.yml  区域规范.docx
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
backend/alembic/versions/: 001_add_connection_session.py
backend/config/: config.yaml
backend/scripts/: migrate_db.py
backend/src/: __init__.py  app.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: __init__.py  router.py
backend/src/api/v1/endpoints/: auto_send.py  dict.py  health.py  message.py  parameter.py  session.py
backend/src/core/: __init__.py  config.py  exceptions.py  middleware.py  security.py
backend/src/db/: __init__.py  session.py
backend/src/models/: __init__.py  auto_send.py  base.py  connection.py  dict.py  message.py  parameter.py  session.py
backend/src/protocols/: __init__.py
backend/src/protocols/stategrid57/: __init__.py  config.py  handler.py  protocol.py  tcp_manager.py
backend/src/repositories/: __init__.py  auto_send_repository.py  connection_repository.py  dict_repository.py  message_repository.py  parameter_repository.py  session_repository.py
backend/src/schemas/: __init__.py  auto_send.py  base.py  connection.py  dict.py  parameter.py  session.py
backend/src/services/: __init__.py  auto_send_service.py  message_handler.py  session_service.py
backend/src/utils/: __init__.py  logger.py  parameter_resolver.py  tcp_manager.py  websocket_manager.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
(+49 files in other folders)
